--- a/index.html
+++ b/index.html
@@ -329,9 +329,16 @@
     				</div>
 				</div>
     		</div>
+<div class="row justify-content-center mt-5"></div>
+			<div class="col-md-6 text-center ftco-animate">
+				<div class="centre">
+				<p><a href="palak_dudhat_resume.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p></div>
 
+			</div>
+		</div>
+	</div>
     		
-    	</div>
+    	
     </section>
 
    
